Registro de problemas diseñado

--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -20,9 +20,7 @@
   </head>
   <body>
     <!-- Header con el menú principal -->
-
     <nav class="mb-1 navbar navbar-expand-lg navbar-light" style="background-color: #fff;">
-
       <a class="navbar-brand" href=""><strong>WhyMex!</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555" aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,9 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href=""><i class="fa fa-home" aria-hidden="true"></i>Inicio
-              <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href=""><i class="fa fa-home" aria-hidden="true"></i>Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/registro/"><i class="fas fa-users"></i>Registrar nuevo problema</a>
@@ -48,13 +44,11 @@
       </div>
     </nav>
     <!-- Termina header-->
-
     <!--¿Qué es WhyMex?-->
-    <div id="container">
-	    
-	    <div id="post">
-		    <center><h1><strong>¿Qué es WhyMex?</strong></h1></center>
-		    <p style=”text-align: justify;”>En México tenemos serios problemas
+    <div id="container"> 
+      <div id="post">
+        <center><h1><strong>¿Qué es WhyMex?</strong></h1></center>
+        <p style=”text-align: justify;”>En México tenemos serios problemas
         con la biodiversidad a raíz de una pesima gestión, una regulación no 
         transparente y una mala toma de decisiones por parte de las autoridades 
         correspondientes. WhyMex nace como apoyo para una toma de decisiones
@@ -63,12 +57,12 @@
         falta de información para tomar esas decisiones. Es por ello que con el apoyo de la sociedad
         recopilaremos información necesaria sobre: 
         <ol>
-          <li>Incendios</li>
-          <li>Sequias</li>
-          <li>Deforestación</li>
-          <li>Cambio de uso de suelo</li> 
-          <li>Vertederos realizados clandestinamente</li>
-          <li>Desechos tóxicos tirados clandestinamente</li>
+          <li><strong>Incendios</strong></li>
+          <li><strong>Sequias</strong></li>
+          <li><strong>Deforestación</strong></li>
+          <li><strong>Cambio de uso de suelo</strong></li> 
+          <li><strong>Vertederos realizados clandestinamente</strong></li>
+          <li><strong>Desechos tóxicos tirados clandestinamente</strong></li>
         </ol>
         Esta información posteriormente será utilizada para tomar decisiones más inteligentes
         y poder responder de una manera más efectiva ante los problemas ámbientales que 
@@ -83,11 +77,10 @@
           ¿<strong>por qué México</strong> no regula a los aguacateros?
           ¿<strong>por qué México</strong> tiene mucha biodiversidad pero pesima gestión y regulación? Etc.
         </p>
-		  </div>
-	    <div id="footer">Hecho con mucho amor y django</div>
-	  </div>
+      </div>
+      <div id="footer">Hecho con mucho amor y django</div>
+    </div>
     <!-- TERMINA ¿Qué es WhyMex?-->
-
     <!--
     <br><br>
     <div class="container">
