--- a/posts/templates/mapa.html
+++ b/posts/templates/mapa.html
@@ -1,43 +1,8 @@
-<!DOCTYPE html>
-<html lang = 'en'>
-    <head>
-        <meta charset='UTF-8'
-        <meta name="description" content="Cuidado del medio ambiente">
-        <meta name="keywords" content=" Arboles, Ecologia, Reforestacion, Trees, Media, Social, Maps, Mexico, Latin, America">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    
-        <title>WhyMex!</title>
-        <!-- CSS only -->
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
-        <!-- My own css -->
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'estilos.css' %}" />   
-    </head>
-    <body>
-        <!-- Header con el menú principal -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-light" style="background-color: #fff;">
-            <a class="navbar-brand" href="/inicio/"><strong>WhyMex!</strong></a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/inicio/"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/registro/"><i class="fas fa-users"></i>Registrar nuevo problema</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/mapa/"><i class="fas fa-map-marked-alt"></i>Mapa de problemas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contacto/"><i class="far fa-comment-alt"></i>Contácto</a>
-                    </li>
-                </ul>  
-            </div>
-        </nav>
-        <!-- Termina header-->
-    </body>	
-</html>	
+{% extends "base_generic.html" %}
+
+{% block content %}
+  <div id="map">
+  {% load static %}
+  <script src="{% static 'map.js' %}"></script>
+  </div>
+{% endblock %}
