Implementación de mapa con folium de python y descartado la de js

--- a/posts/templates/contacto.html
+++ b/posts/templates/contacto.html
@@ -1,1 +1,14 @@
 {% extends "base_generic.html" %}
+
+{% block content %}
+    <!--Información de contacto-->
+    <div id="container"> 
+        <div id="post">
+            <center><h2><strong>¡Hola! Bienvenido</strong></h2></center>
+            <p style=”text-align: justify;”>Está paǵina fue realizada  <br>
+            </p>
+        </div>
+        <div id="footer">&copy Todos los derechos reservados</div>
+    </div>
+    <!-- TERMINA Información de contacto-->
+{% endblock %}
