--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -3,35 +3,35 @@
     <!--¿Qué es WhyMex?-->
     <div id="container"> 
       <div id="post">
-        <center><h1><strong>¿Qué es WhyMex?</strong></h1></center>
+        <center><h2><strong>¿Qué es WhyMex?</strong></h2></center>
         <p style=”text-align: justify;”>En México tenemos serios problemas
-        con la biodiversidad a raíz de una pesima gestión, una regulación no 
+        con la biodiversidad a raíz de una pésima gestión, una regulación no 
         transparente y una mala toma de decisiones por parte de las autoridades 
         correspondientes. WhyMex nace como apoyo para una toma de decisiones
         más informada respecto a la biodiversidad de México.<br>
-        <br> Como Cientificos de Datos creemos firmemente que no hay malas decisiones solo 
+        <br> Como Científicos de Datos creemos firmemente que no hay malas decisiones solo 
         falta de información para tomar esas decisiones. Es por ello que con el apoyo de la sociedad
         recopilaremos información necesaria sobre: 
         <ol>
           <li><strong>Incendios</strong></li>
-          <li><strong>Sequias</strong></li>
+          <li><strong>Sequías</strong></li>
           <li><strong>Deforestación</strong></li>
           <li><strong>Cambio de uso de suelo</strong></li> 
           <li><strong>Vertederos realizados clandestinamente</strong></li>
           <li><strong>Desechos tóxicos tirados clandestinamente</strong></li>
         </ol>
         Esta información posteriormente será utilizada para tomar decisiones más inteligentes
-        y poder responder de una manera más efectiva ante los problemas ámbientales que 
+        y poder responder de una manera más efectiva ante los problemas ambientales que 
         amenazan a México y su biodiversidad.
         </p>
-        <center><h1><strong>¿Por qué el nombre "WhyMex"?</strong></h1></center>
+        <center><h2><strong>¿Por qué el nombre "WhyMex"?</strong></h2></center>
         <p style="text-align: justify;">
-          Mex hace referencía a México, tomando esto y haciendo la traducción al español
-          es "¿Por qué México?" Que es una pregunta que hace referencía al 
+          Mex hace referencia a México, tomando esto y haciendo la traducción al español
+          es "¿Por qué México?" Que es una pregunta que hace referencia al 
           cuerpo principal de muchas preguntas que se pueden escuchar en las pláticas de 
-          los transeuntes mexicanos: ¿<strong>por qué México</strong> no protege a la mujer?
+          los transeúntes mexicanos: ¿<strong>por qué México</strong> no protege a la mujer?
           ¿<strong>por qué México</strong> no regula a los aguacateros?
-          ¿<strong>por qué México</strong> tiene mucha biodiversidad pero pesima gestión y regulación? Etc.
+          ¿<strong>por qué México</strong> tiene mucha biodiversidad pero pésima gestión y regulación? Etc.
         </p>
       </div>
       <div id="footer">Hecho con mucho amor y django</div>
