Nuevos problemas añadidos

--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -9,7 +9,7 @@
         transparente y una mala toma de decisiones por parte de las autoridades 
         correspondientes. WhyMex nace como apoyo para una toma de decisiones
         más informada respecto a la biodiversidad de México.<br>
-        <br> Como Científicos de Datos creemos firmemente que no hay malas decisiones solo 
+        <br> Como científicos de datos creemos firmemente que no hay malas decisiones solo 
         falta de información para tomar esas decisiones. Es por ello que con el apoyo de la sociedad
         recopilaremos información necesaria sobre: 
         <ol>
