--- a/posts/templates/registro.html
+++ b/posts/templates/registro.html
@@ -18,9 +18,11 @@
                         <option value="Incendio">Incendio</option>
                         <option value="Sequia">Sequia</option>
                         <option value="Deforestación">Deforestación</option>
+                        <option value="Deslaves">Deslaves</option>
+                        <option value="EstancamientoAgua">Estancamiento de agua</option>
                         <option value="Cambio de suelo">Cambio de uso de suelo</option>
                         <option value="Vertederos clandestinos">Vertederos realizados clandestinamente</option>
-                        <option value="Desechos tóxicos">Desechos tóxicos tirados clandestinamente</option>
+                        <option value="Desechos tóxicos">Desechos tóxicos/biológicos tirados clandestinamente</option>
                     </select>
                 </div>
                 <div class="col-md-6">
