--- a/posts/templates/contacto.html
+++ b/posts/templates/contacto.html
@@ -1,12 +1,21 @@
 {% extends "base_generic.html" %}
-
+{% load static %}
 {% block content %}
     <!--Información de contacto-->
     <div id="container"> 
         <div id="post">
             <center><h2><strong>¡Hola! Bienvenido</strong></h2></center>
-            <p style=”text-align: justify;”>Está paǵina fue realizada  <br>
+            <p style=”text-align: justify;”>Está paǵina fue realizada para recolectar datos
+                de problemas sociales en México con la finalidad de buscar y proponer estrategías 
+                basadas en datos para darles una solución fundamentada. Se pretende que los datos 
+                sean proporcionados por la misma sociedad que es la que presencia estos problemas
+                en su día y posteriormente científicos de datos hagan un análisis y con apoyo de otros
+                especialistas propongan diferentes soluciones.<br>
+
+                <br> Esta página es por y para los mexicanos, queremos un país que respete la naturaleza
+                y se le cuide como es debido antes de que sea demasiado tarde.
             </p>
+            <p>&hearts;</p>
         </div>
         <div id="footer">&copy Todos los derechos reservados</div>
     </div>
