--- a/posts/templates/base_generic.html
+++ b/posts/templates/base_generic.html
@@ -36,13 +36,16 @@
                         <a class="nav-link" href="/inicio/"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/registro/"><i class="fas fa-users"></i>Registrar nuevo problema</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/mapa/"><i class="fas fa-map-marked-alt"></i>Mapa de problemas</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/registro/"><i class="fas fa-users"></i>Registrar nuevo problema</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/contacto/"><i class="far fa-comment-alt"></i>Contácto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/dudas/"><i class="fas fa-map-marked-alt"></i>Ayuda</a>
                     </li>
                 </ul>  
             </div>
