--- a/posts/templates/contacto.html
+++ b/posts/templates/contacto.html
@@ -5,18 +5,33 @@
     <div id="container"> 
         <div id="post">
             <center><h2><strong>¡Hola! Bienvenido</strong></h2></center>
-            <p style=”text-align: justify;”>Está paǵina fue realizada para recolectar datos
-                de problemas sociales en México con la finalidad de buscar y proponer estrategías 
-                basadas en datos para darles una solución fundamentada. Se pretende que los datos 
-                sean proporcionados por la misma sociedad que es la que presencia estos problemas
-                en su día y posteriormente científicos de datos hagan un análisis y con apoyo de otros
-                especialistas propongan diferentes soluciones.<br>
+            <p style=”text-align: justify;”>Está página fue realizada para recolectar datos
+                de problemas sociales/ambientales en México con la finalidad de buscar y proponer
+                estrategias basadas en datos para darles una solución fundamentada en datos.
+                Se pretende que los datos sean proporcionados por la misma sociedad que es la
+                que presencia estos problemas de primera mano y posteriormente científicos
+                de datos hagan un análisis y con apoyo de otros especialistas propongan diferentes
+                soluciones.<br>
 
-                <br> Esta página es por y para los mexicanos, queremos un país que respete la naturaleza
-                y se le cuide como es debido antes de que sea demasiado tarde.
+                <br>Esta página es por y para los mexicanos, queremos un país que respete la naturaleza
+                y se le cuide como es debido antes de que sea demasiado tarde.</p>
+            <p><strong>¿Tienes alguna habilidad que crees que puede ayudar a crecer este proyecto?</strong>
+                <br>¡Colabora con nosotros!</p>
+            <p><strong>¿Cómo lo hago?</strong>
+            <br>Puedes clonar el repositorio, hacer tu aporte modificando o editando algo de 
+            código y hacer un pull request, posteriormente el equipo lo revisará.</p>
+            <p><a href="https://github.com/Ladivcr/WhyMex">Repositorio del proyecto</a></p>
+
+            <p><strong>¿El repositorio no está disponible?</strong>
+                <br>Tal vez está oculto por algunas cuestiones. Pero no te preocupes,
+                si tienes muchas ganas de colaborar, por favor escríbeme a mi correo
+                personal: <strong>vidalecardano@yahoo.com</strong> 
+                para conversar un poco sobre tu perfil y la razón por la cual quieres colaborar
+                y así añadirte al equipo y en el proyecto.
             </p>
-            <p>&hearts;</p>
+            <p><center><h1>¡Hagamos que este proyecto crezca! &hearts;</h1></center></p>
         </div>
+
         <div id="footer">&copy Todos los derechos reservados</div>
     </div>
     <!-- TERMINA Información de contacto-->
