--- a/posts/templates/registro.html
+++ b/posts/templates/registro.html
@@ -18,11 +18,23 @@
                         <option value="Incendio">Incendio</option>
                         <option value="Sequia">Sequia</option>
                         <option value="Deforestación">Deforestación</option>
-                        <option value="Deslaves">Deslaves</option>
-                        <option value="EstancamientoAgua">Estancamiento de agua</option>
-                        <option value="Cambio de suelo">Cambio de uso de suelo</option>
-                        <option value="Vertederos clandestinos">Vertederos realizados clandestinamente</option>
-                        <option value="Desechos tóxicos">Desechos tóxicos/biológicos tirados clandestinamente</option>
+                        <!-- <option value="Deslaves">Deslaves</option> -->
+                        <option value="Pesca_ilegal">Pesca ilegal</option>
+                        <option value="Estancamiento_de_agua">Estancamiento de agua</option>
+                        <option value="Cambio_de_suelo">Cambio de uso de suelo</option>
+                        <option value="Vertederos_clandestinos">Vertederos realizados clandestinamente</option>
+                        <option value="Desechos_toxicos">Desechos tóxicos tirados clandestinamente</option>
+                        <option value="Desechos_biologicos">Desechos biológicos tirados clandestinamente</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                    <label for="inputImportancia" class="form-label">Nivel de importancia considerado</label>
+                    <select id="myImportancia" class="form-select" required>
+                        <option disabled="" selected="">Seleccionar nivel de importancia</option>
+                        <option value="Extremadamente_Alta">Extremadamente Alta</option>
+                        <option value="Alta">Alta</option>
+                        <option value="Media">Media</option>
+                        <option value="Baja">Baja</option>
                     </select>
                 </div>
                 <div class="col-md-6">
