--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -3,6 +3,7 @@
     <!--¿Qué es WhyMex?-->
     <div id="container"> 
       <div id="post">
+        <p style="text-align: justify;">¡Hola! Bievenido, probablemente te preguntes...</p>
         <center><h2><strong>¿Qué es WhyMex?</strong></h2></center>
         <p style=”text-align: justify;”>En México tenemos serios problemas
         con la biodiversidad a raíz de una pésima gestión, una regulación no 
@@ -24,7 +25,7 @@
         y poder responder de una manera más efectiva ante los problemas ambientales que 
         amenazan a México y su biodiversidad.
         </p>
-        <center><h2><strong>¿Por qué el nombre "WhyMex"?</strong></h2></center>
+        <center><h2><strong>¿Por qué el nombre de "WhyMex"?</strong></h2></center>
         <p style="text-align: justify;">
           Mex hace referencia a México, tomando esto y haciendo la traducción al español
           es "¿Por qué México?" Que es una pregunta que hace referencia al 
