Recuperar datos de formulario

--- a/posts/templates/contacto.html
+++ b/posts/templates/contacto.html
@@ -1,4 +1,7 @@
 {% extends "base_generic.html" %}
+{% block head_content %}
+    <title>Contacto</title>    
+{% endblock %} 
 {% load static %}
 {% block content %}
     <!--Información de contacto-->
