--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base_generic.html" %}
+{% block head_content %}
+  <title>WhyMex!</title>    
+{% endblock %} 
 {% block content %}
     <!--¿Qué es WhyMex?-->
     <div id="container"> 
