--- a/posts/templates/mapa.html
+++ b/posts/templates/mapa.html
@@ -1,6 +1,9 @@
 
 
 {% extends "base_generic.html" %}
+{% block head_content %}
+<title>Mapa de problemas</title>    
+{% endblock %} 
 
 {% block content %}
     <div id="container">
