--- a/posts/templates/ayuda.html
+++ b/posts/templates/ayuda.html
@@ -1,8 +1,11 @@
 {% extends "base_generic.html" %}
+{% block head_content %}
+    <title>Ayuda</title>    
+{% endblock %} 
 {% load static %}
 {% block content %}
     <!--Información de contacto-->
-    <div id="container"> 
+    <div id="container">
         <div id="post">
             <center><h2><strong>¡Hola! Bienvenido a la sección de ayuda</strong></h2></center>
             <p style=”text-align: justify;”>Antes de enviarnos tu pregunta, por favor
@@ -11,22 +14,22 @@
             <center><h1><strong>¿Cómo puedo registrar los datos de un nuevo problema?</strong></h1></center>
             <ul>
                 <li>Ir a la sección "Registrar nuevo problema"</li>
-                <center><img src="{% static 'imagenes/registrar_problema.jpg' %}"
+                <center><img src="{% static 'img/registrar_problema.jpg' %}"
                     width="700"
                     height="500"
                     alt="Flecha apuntando a la sección de Registrar nuevo problema"
                     title="Flecha apuntando a la sección de Registrar nuevo problema"></center>
             </ul>
-            <p style="text-align: justify;">Ahí podras encontrar un menú similar al de la 
-            imagen en el cual tendrás que introducir los datos necesarios para registrar el 
-            problema. Los campos obligatorios son: Latitud, Longitud, Tipo de problema, 
-            Nivel de importancia considerado y el estado.</p>   
-            
+            <p style="text-align: justify;">Ahí podras encontrar un menú similar al de la
+            imagen en el cual tendrás que introducir los datos necesarios para registrar el
+            problema. Los campos obligatorios son: Latitud, Longitud, Tipo de problema,
+            Nivel de importancia considerado y el estado.</p>
+
             <center><h1><strong>¿De dónde puedo obtener las coordenadas de Latitud y Longitud?</strong></h1></center>
-            
+
             <ul>
                 <li>Abrir <a href="https://www.google.com.mx/maps/">Google Maps</a> y marcar el lugar del problema</li>
-                <center><img src="{% static 'imagenes/marcar_punto.jpg' %}"
+                <center><img src="{% static 'img/marcar_punto.jpg' %}"
                     width="700"
                     height="500"
                     alt="Flecha apuntando a un punto sobre el mapa"
@@ -35,26 +38,26 @@
                 superior, donde se encuentra el enlace, se añadirán las coordenadas.</p>
 
                 <li>Copiar las coordenadas</li>
-                <center><img src="{% static 'imagenes/obtener_coordenadas.jpg' %}"
+                <center><img src="{% static 'img/obtener_coordenadas.jpg' %}"
                     width="700"
                     height="500"
                     alt="Flecha apuntando a la barra de enlace"
                     title="Flecha apuntando a a la barra de enlace"></center>
-                <p style="text-align: justify;">Las coordenadas ya vienen en el orden: Latitud y Longitud, 
+                <p style="text-align: justify;">Las coordenadas ya vienen en el orden: Latitud y Longitud,
                 por lo que únicamente tienes que pegarlas en algún lugar cómodo para transcribirlas después.</p>
 
                 <li>Escrbir los datos necesarios</li>
-                <center><img src="{% static 'imagenes/datos_escritos.jpg' %}"
+                <center><img src="{% static 'img/datos_escritos.jpg' %}"
                     width="700"
                     height="500"
                     alt="Campos rellenados con sus respectivos datos"
                     title="Campos rellenados con sus respectivos datos"></center>
-                <p style="text-align: justify;">Hemos escritos los campos obligatorios para este ejemplo hipotético, 
+                <p style="text-align: justify;">Hemos escritos los campos obligatorios para este ejemplo hipotético,
                 una vez introducidos los datos del problema. Presiona en el botón que se encuentra en la parte
                 inferior izquierda para registrarlo en la base de datos.</p>
 
                 <li>Visualizar la información</li>
-                <center><img src="{% static 'imagenes/mostrar_punto.jpg' %}"
+                <center><img src="{% static 'img/mostrar_punto.jpg' %}"
                     width="700"
                     height="500"
                     alt="Icono de árbol sobre un mapa"
@@ -63,11 +66,11 @@
                 en el Mapa de problemas.</p>
 
             </ul>
-            
-            <p style="text-align: justify;"><strong>Hola usuario, gracias por usar nuestra aplicación. 
+
+            <p style="text-align: justify;"><strong>Hola usuario, gracias por usar nuestra aplicación.
                 Continuamos desarrollando la aplicación para que cada vez sea más cómoda para ti.</strong></p>
 
-            
+
             <p><center><h1>¡Hagamos que este proyecto crezca! &hearts;</h1></center></p>
         </div>
 
