--- a/posts/templates/base_generic.html
+++ b/posts/templates/base_generic.html
@@ -6,25 +6,28 @@
         <meta name="keywords" content=" Arboles, Ecologia, Reforestacion, Trees, Media, Social, Maps, Mexico, Latin, America">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WhyMex!</title>
+        {% block head_content %}
+    
+        {% endblock %}  
+        
         <!-- CSS only -->
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css"/>
-       
+
         <!-- My own css -->
         {% load static %}
-        <link rel="stylesheet" href="{% static 'estilos.css' %}" />  
-        
+        <link rel="stylesheet" href="{% static 'css/estilos.css' %}" />  
+
         <!-- ESTO ES PARA EL MAPA -->
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <!-- <link rel="stylesheet" type="text/css" href="{% static 'map.css' %}"> -->
         <!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"> -->
         <!-- <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script> -->
         <!-- TERMINA MAPA-->
-        
+
     </head>
     <body>
         <!-- Header con el menú principal -->
@@ -47,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/dudas/"><i class="fas fa-map-marked-alt"></i>Ayuda</a>
                     </li>
-                </ul>  
+                </ul>
             </div>
         </nav>
         <!-- Termina header-->
@@ -56,5 +59,5 @@
 
         {% endblock %}
         <!-- Aquí termina todo lo de los demás html-->
-    </body>	
-</html>	
+    </body>
+</html>
