--- a/posts/templates/base_generic.html
+++ b/posts/templates/base_generic.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css"/>
-
+        <link rel=”stylesheet” href=”http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css”>  
         <!-- My own css -->
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/estilos.css' %}" />  
@@ -31,7 +31,8 @@
     </head>
     <body>
         <!-- Header con el menú principal -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-light" style="background-color: #fff;">
+        <div class=”container”>
+        <nav class="mb-1 navbar navbar-expand-lg navbar-light"  style="background-color: #fff;">
             <a class="navbar-brand" href="/inicio/"><strong>WhyMex!</strong></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
                 <ul class="navbar-nav mr-auto">
@@ -53,6 +54,7 @@
                 </ul>
             </div>
         </nav>
+        &nbsp;</div>
         <!-- Termina header-->
         <!-- Aquí va a ir todo lo de los demás html-->
         {% block content %}
